eu-central-1/production/elite_vpc.tf
resource "aws_vpc" "elite-vpc" {
  cidr_block           = "172.16.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(local.common_tags, { Name = "elite-secure-production" })
}

resource "aws_subnet" "elite-public-a" {
  vpc_id            = aws_vpc.elite-vpc.id
  cidr_block        = "172.16.0.0/21"
  availability_zone = "eu-central-1a"

  map_public_ip_on_launch = true

  tags = merge(local.common_tags, { Name = "elite-secure-production-public-a" })
}

resource "aws_subnet" "elite-private-a" {
  vpc_id            = aws_vpc.elite-vpc.id
  cidr_block        = "172.16.8.0/21"
  availability_zone = "eu-central-1a"

  tags = merge(local.common_tags, { Name = "elite-secure-production-private-a" })
}

resource "aws_subnet" "elite-public-b" {
  vpc_id            = aws_vpc.elite-vpc.id
  cidr_block        = "172.16.16.0/21"
  availability_zone = "eu-central-1b"

  map_public_ip_on_launch = true

  tags = merge(local.common_tags, { Name = "elite-secure-production-public-b" })
}

resource "aws_subnet" "elite-private-b" {
  vpc_id            = aws_vpc.elite-vpc.id
  cidr_block        = "172.16.24.0/21"
  availability_zone = "eu-central-1b"

  tags = merge(local.common_tags, { Name = "elite-secure-production-private-b" })
}

resource "aws_subnet" "elite-public-c" {
  vpc_id                  = aws_vpc.elite-vpc.id
  cidr_block              = "172.16.32.0/21"
  availability_zone       = "eu-central-1c"
  map_public_ip_on_launch = true

  tags = merge(local.common_tags, { Name = "elite-secure-production-public-c" })
}

resource "aws_subnet" "elite-private-c" {
  vpc_id            = aws_vpc.elite-vpc.id
  cidr_block        = "172.16.40.0/21"
  availability_zone = "eu-central-1c"

  tags = merge(local.common_tags, { Name = "elite-secure-production-private-c" })
}

resource "aws_internet_gateway" "elite-gateway" {
  vpc_id = aws_vpc.elite-vpc.id

  tags = merge(local.common_tags, { Name = "elite-vpc-internet-gateway" })
}

resource "aws_route_table" "public-subnet-rtb" {
  vpc_id = aws_vpc.elite-vpc.id
  tags   = merge(local.common_tags, { Name = "elite-vpc-public-subnet-rtb" })

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.elite-gateway.id
  }
}

resource "aws_route_table_association" "public-rtb-a" {
  subnet_id      = aws_subnet.elite-public-a.id
  route_table_id = aws_route_table.public-subnet-rtb.id
}

resource "aws_route_table_association" "public-rtb-b" {
  subnet_id      = aws_subnet.elite-public-b.id
  route_table_id = aws_route_table.public-subnet-rtb.id
}

resource "aws_route_table_association" "public-rtb-c" {
  subnet_id      = aws_subnet.elite-public-c.id
  route_table_id = aws_route_table.public-subnet-rtb.id
}

resource "aws_route_table" "private-subnet-rtb" {
  vpc_id = aws_vpc.elite-vpc.id
  tags   = merge(local.common_tags, { Name = "elite-vpc-private-subnet-rtb" })
}

resource "aws_route_table_association" "private-rtb-a" {
  subnet_id      = aws_subnet.elite-private-a.id
  route_table_id = aws_route_table.private-subnet-rtb.id
}

resource "aws_route_table_association" "private-rtb-b" {
  subnet_id      = aws_subnet.elite-private-b.id
  route_table_id = aws_route_table.private-subnet-rtb.id
}

resource "aws_route_table_association" "private-rtb-c" {
  subnet_id      = aws_subnet.elite-private-c.id
  route_table_id = aws_route_table.private-subnet-rtb.id
}

resource "aws_security_group" "elite-sg" {
  name        = "secure-elite-sg"
  description = "security group for the VPC"
  vpc_id      = aws_vpc.elite-vpc.id

  tags = merge(local.common_tags, { Name = "elite-vpc-sg" })
}

resource "aws_vpc_security_group_egress_rule" "elite-sg-egress" {
  security_group_id = aws_security_group.elite-sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
